--- a/News/app/src/main/res/layout/news_list_item.xml
+++ b/News/app/src/main/res/layout/news_list_item.xml
@@ -9,10 +9,10 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
 
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:id="@+id/newsIconImageView"/>
 
     <LinearLayout
@@ -20,14 +20,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="8dp">
     <TextView
         android:id="@+id/newsTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Hello world"
 
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
 
 
 
@@ -37,7 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dateTextView"
-        android:layout_gravity="bottom"
+
+        android:layout_gravity="right"
+        android:layout_marginEnd="16dp"
+
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="20dp"
