--- a/News/app/src/main/res/layout/news_list_item.xml
+++ b/News/app/src/main/res/layout/news_list_item.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/primaryLightColor"
+    >
 
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginTop="8dp"
