--- a/News/app/src/main/res/values/colors.xml
+++ b/News/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryColor">#dce775</color>
+    <color name="primaryLightColor">#ffffa6</color>
+    <color name="primaryDarkColor">#a8b545</color>
+    <color name="primaryTextColor">#000000</color>
 </resources>
