--- a/News/app/src/main/res/layout/news_list_item.xml
+++ b/News/app/src/main/res/layout/news_list_item.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:background="@color/primaryLightColor"
-    >
+    android:background="@color/primaryColor"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="8dp">
 
 
     <com.facebook.drawee.view.SimpleDraweeView
@@ -13,7 +15,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
-
+        app:placeholderImage="@drawable/error"
         android:layout_marginEnd="8dp"
         android:id="@+id/newsIconImageView"/>
 
